--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
+pom.xml
+*jar
+/lib/
+/classes/
+/targets/
+/target/
+.lein-deps-sum
 .lein-repl-history
 .nrepl-port
-alfresco-technical-validation.log
-target/
+.shell_history
+*.log
