--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 pom.xml
+pom.xml.asc
 *jar
 /lib/
 /classes/
@@ -6,6 +7,7 @@ pom.xml
 /target/
 .lein-deps-sum
 .lein-repl-history
+.lein-failures
 .nrepl-port
 .shell_history
 *.log
